--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Run Scala Steward
         uses: scala-steward-org/scala-steward-action@v2
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.SCALA_STEWARD_TOKEN }}
           author-email: scala-steward[bot]@users.noreply.github.com
           author-name: scala-steward[bot]
           # Uncomment to limit updates per run
