--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,13 @@ jobs:
       - name: Start Docker environment
         run: make up
 
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          timeout 60 bash -c 'until docker compose -f stack/services.yaml exec -T postgres pg_isready -U admin -d bardenas; do sleep 2; done'
+
+      - name: Flyway migration
+        run: sbt flywayMigrate
+
       - name: Run tests
         run: sbt -v test
 
