--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,5 +73,21 @@ jobs:
       - name: Show sbt version
         run: sbt --version
 
+      - name: Start Docker environment
+        run: make up
+
+      - name: Check containers
+        run: |
+          sleep 20
+          docker ps
+          docker compose -f stack/services.yaml logs postgres
+
+      - name: Flyway migration
+        run: sbt flywayMigrate
+
       - name: Run tests
         run: sbt -v test
+
+      - name: Stop Docker environment
+        if: always()
+        run: make down
