--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,6 +5,13 @@ database {
   password = "12345"
 }
 
+mongo {
+  host = "localhost"
+  port = 27017
+  user = "admin"
+  password = "12345"
+}
+
 server {
   host = "0.0.0.0"
   port = 8080
